--- a/example/src/front.html
+++ b/example/src/front.html
@@ -1,1 +1,11 @@
-<script async src="./front.js"></script>
+<html>
+  <head>
+    <title>CSS Modules Electron Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
+  </head>
+  <body>
+    <div id="outlet"></div>
+    <script src="./front.js"></script>
+  </body>
+</html>
